# meridian-2026

./: .env.local.example  .gitignore  DESIGN_DECISIONS.md  README.md  biome.json  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.next/standalone/: package.json  server.js
.next/standalone/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json
.next/standalone/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  middleware-react-loadable-manifest.js  middleware.js  next-font-manifest.js  next-font-manifest.json  (+1 more)
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/manifesto/: page.tsx
app/pricing/: page.tsx
app/product/: page.tsx
app/signals/: page.tsx
app/styleguide/: layout.tsx  page.tsx
app/styleguide/motion/: page.tsx
components/motion/: Counter.tsx  Cursor.tsx  MagneticButton.tsx  Marquee.tsx  Parallax.tsx  Reveal.tsx
components/r3f/: ShaderBackground.client.tsx  ShaderBackground.tsx
components/site/: CapabilityGrid.tsx  Footer.tsx  Header.tsx  Hero.tsx  LenisProvider.tsx  ManifestoCall.tsx  ManifestoStrip.tsx  PageHero.tsx  SignalGrid.tsx  StickyWalkthrough.tsx
components/ui/: button.tsx  kpi.tsx  surface.tsx
hooks/: useHasPointer.ts  usePrefersReducedMotion.ts
keboola-config/: setup.sh
keboola-config/nginx/sites/: default.conf
keboola-config/supervisord/services/: app.conf
lib/: keboola.ts
(+93 files in other folders)
